use zinc to compile